CHANGES - - made a better UI for video uploader component - added shad CN's sheet for right panel - solve the multi icon bug incase of right panel, now only one appears at a time - fixed UI and state bugs in right panel - made sliders in images right panel for values such as  - grayscale, blur, contrast and brightness

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,3 +128,23 @@ body {
 .videoButtonRightPanel {
   pointer-events: auto;
 }
+
+.noScrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.noScrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Internet Explorer and Edge */
+.noScrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+/* Hide scrollbar for Firefox */
+.noScrollbar {
+  scrollbar-width: none; /* Firefox */
+}
